# MasterThesisTests

./: .gitignore  README.md
BenchProto/: efficientnet_2025-11-20_15-35-45.json  efficientnet_quantized_2025-11-27_11-56-01.json  efficientnet_quantized_2025-12-11_15-53-48.json  efficientnet_v2_pruned_2025-11-24_11-27-38.json  full_requirements.txt  initialize_project.sh  logging_config.py  mobilenet_v2_2025-11-24_11-01-12.json  mobilenet_v2_2025-11-25_17-07-59.json  mobilenet_v2_pruned_2025-12-03_16-28-12.json  mobilenet_v2_quantized_2025-11-25_17-08-32.json  mobilenet_v2_quantized_2025-11-27_14-45-46.json  prova  requirements.txt  utils.py
BenchProto/BenchmarkingFactory/: aiModel.py  calibrationDataReader.py  dataWrapper.py  doe.py  optimization.py
BenchProto/ConfigurationModule/: configurationManager.py
BenchProto/Converters/: calibration_data.py
BenchProto/PackageDownloadModule/: packageDownloadManager.py  packageDownloaderManager.py
BenchProto/PlatformContext/: platform_context.py
BenchProto/Plots/: image_placeholder.txt
BenchProto/ProbeHardwareModule/: probeHardwareManager.py
frabru/testONNX/flower_onnx/: clientApp.py  pyproject.toml  serverApp.py
frabru/testONNX/flower_onnx/old_training/: trainingTest.py
frabru/testONNX/flower_onnx/tfexample/: clientApp.py  requirements.txt  serverApp.py
frabru/testONNX/flower_onnx/tfexample/old_training/: trainingTest.py
frabru/testONNX/flower_onnx/tfexample/tools/: createArtifacts.py  exportModel.py
frabru/testONNX/flower_onnx/tfexample/training_artifacts/: training_model.onnx
(+96 files in other folders)
