[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tfexample"
version = "1.0.0"
description = "Federated Learning with Tensorflow/Keras and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow==2.16.1 ; (platform_machine == \"x86_64\" or platform_machine == \"aarch64\" or platform_machine == \"AMD64\")",
    "tensorflow-macos>=2.9.1, != 2.11.1 ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
]
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "tfexample.serverApp:server_app"
clientapp = "tfexample.clientApp:client_app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 1
batch-size = 4
learning-rate = 0.1
fraction-train = 0.5
verbose = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
root-certificates = "./.cache/certificates/ca.crt"
